crates/omnifs-itest/tests/linear/snapshots/issue-read__04-read-title.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: replayed
---
## step 4: read /teams/PNTR/issues/open/PNTR-1/title
attrs: dynamic - 20
bytes (20):
<redacted:abbe98e6>

canonical:
  /teams/PNTR/issues/all/PNTR-1/assignee  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/all/PNTR-1/description.md  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/all/PNTR-1/item.json  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/all/PNTR-1/item.md  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/all/PNTR-1/priority  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/all/PNTR-1/state  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/all/PNTR-1/title  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/open/PNTR-1/assignee  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/open/PNTR-1/description.md  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/open/PNTR-1/item.json  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/open/PNTR-1/item.md  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/open/PNTR-1/priority  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/open/PNTR-1/state  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
  /teams/PNTR/issues/open/PNTR-1/title  sha256:dc06aba327bcc8731df765caadff5ae8485211bd55fd72b266de3f2be3e959c9
fs:
  (none)
invalidations:
  (none)
